fix hw4